--- a/style.css
+++ b/style.css
@@ -56,7 +56,11 @@ a {
 a:hover {
     background-color: rgb(116, 182, 41);
 }
-
+img {
+    margin-top: -100px;
+    width: 200px;
+    border-radius: 50px;
+}
 /* Responsive Design */
 
 /* For small screens (phones) */
@@ -74,6 +78,11 @@ a:hover {
         font-size: 5vw;
         padding: 10px 20px;
     }
+    img {
+        width: 150px;
+        border-radius: 50px;
+        margin-top: -100px;
+    }
 }
 
 /* For medium screens (tablets) */
@@ -90,6 +99,10 @@ a:hover {
     a {
         font-size: 3.5vw;
         padding: 12px 24px;
+    }
+    img {
+        width: 170px;
+        border-radius: 50px;
     }
 }
 
